--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FiveM Discord Login</title>
+  <title>InfiniteRP Discord Login</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background: #36393f; color: white; }
     button { padding: 15px 30px; font-size: 18px; background: #5865F2; color: white; border: none; border-radius: 8px; cursor: pointer; }
@@ -14,34 +14,33 @@
 </head>
 <body>
 
-  <h1>Welcome to InfiniteRP FiveM</h1>
-  <p>Login with Discord to link your account and see stats.</p>
+  <h1>InfiniteRP FiveM Login</h1>
+  <p>Click below — login will open in a new tab for smoother experience.</p>
 
-  <button id="loginBtn">Login with Discord</button>
+  <button id="loginBtn">Login with Discord (New Tab)</button>
 
   <div id="user-info">
     <img id="avatar" src="" alt="Avatar" />
     <h2 id="username"></h2>
     <p>Discord ID: <span id="id"></span></p>
     <button onclick="logout()">Logout</button>
+    <button onclick="copyId()">Copy Discord ID</button>
   </div>
 
   <script>
     const CLIENT_ID = "1461405429543469278";
-    const REDIRECT_URI = window.location.origin + window.location.pathname;  // Auto-uses your GitHub Pages URL
+    const REDIRECT_URI = window.location.origin + window.location.pathname;
     const SCOPES = "identify";
 
     const loginBtn = document.getElementById("loginBtn");
     const userInfo = document.getElementById("user-info");
 
-    // Handle redirect back from Discord
     function handleCallback() {
       const hash = window.location.hash.substring(1);
       const params = new URLSearchParams(hash);
       const accessToken = params.get("access_token");
 
       if (accessToken) {
-        // Clean the URL (remove hash)
         history.replaceState(null, null, window.location.pathname);
 
         fetch("https://discord.com/api/users/@me", {
@@ -57,16 +56,12 @@
             }
             loginBtn.style.display = "none";
             userInfo.style.display = "block";
-
-            // Optional: Store token (expires in ~7 days)
-            localStorage.setItem("discord_token", accessToken);
           }
         })
-        .catch(err => console.error("Fetch error:", err));
+        .catch(err => console.error(err));
       }
     }
 
-    // Login button
     loginBtn.onclick = () => {
       const authUrl = `https://discord.com/api/oauth2/authorize?` +
         `client_id=${CLIENT_ID}` +
@@ -74,7 +69,7 @@
         `&response_type=token` +
         `&scope=${encodeURIComponent(SCOPES)}`;
 
-      window.location.href = authUrl;
+      window.open(authUrl, "_blank");  // ← Opens in new tab!
     };
 
     function logout() {
@@ -84,7 +79,11 @@
       userInfo.style.display = "none";
     }
 
-    // Check on load
+    function copyId() {
+      const id = document.getElementById("id").textContent;
+      navigator.clipboard.writeText(id).then(() => alert("Discord ID copied!"));
+    }
+
     window.onload = handleCallback;
   </script>
 
